--- a/lab7cpp.adoc
+++ b/lab7cpp.adoc
@@ -21,7 +21,7 @@ NOTE: Кожне завдання реалізувати із використа
 
 == Варіанти завдань
 
-.  *Student*: id, Прізвище, Ім’я, По батькові, Дата народж., Адреса, Телефон, Факультет, Курс, Група
+.  *Student*: id, Прізвище, Ім’я, По батькові, Дата народження, Адреса, Телефон, Факультет, Курс, Група
 Створити бінарне дерево пошуку структур. Вивести:
 ..	список студентів вказаного факультету у порядку зростання дати народження;
 ..	список студентів, що народились після вказаного року;
