--- a/lab7cpp.adoc
+++ b/lab7cpp.adoc
@@ -21,7 +21,7 @@ NOTE: Кожне завдання реалізувати із використа
 
 == Варіанти завдань
 
-.  *Student*: id, Прізвище, Ім’я, По батькові, Дата народження, Адреса, Телефон, Факультет, Курс, Група
+.  *Student*: id, Прізвище, Ім’я, По батькові, Дата народження, Адреса, Телефон, Факультет, Курс, Група.
 Створити бінарне дерево пошуку структур. Вивести:
 ..	список студентів вказаного факультету у порядку зростання дати народження;
 ..	список студентів, що народились після вказаного року;
@@ -62,7 +62,7 @@ NOTE: Кожне завдання реалізувати із використа
 ..	відомості про абонентів, у яких час міських розмов перевищує вказаний у порядку алфавіту;
 ..	відомості про абонентів, які користувались міжміським зв’язком;
 ..	відомості про абонентів в алфавітному порядку;
-..	повну інформацію про абонента із вказаним номером кредитної картки
+..	повну інформацію про абонента із вказаним номером кредитної картки.
 .  *Car*: id, Марка, Модель, Рік випуску, Колір, Ціна, Реєстраційний номер.
 Створити бінарне дерево пошуку структур. Вивести:
 ..	список автомобілів заданої марки, впорядкований за зростанням реєстраційного номера;
